# sphinxrun

./: .readthedocs.yaml  README.md  pyproject.toml
doc/source/: conf.py  index.rst
docs/: requirements.txt
docs/source/: conf.py  example.py  index.rst  lorem.txt
sphinxrun/: __init__.py  directive.py  directives.py  mpl.py  runner.py  show.py
