[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 40.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[project]
dependencies = [
    "sphinx>=8.2.3",
]
description = "Dynamically generated content for sphinx documentations"
name = "sphinxrun"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[tool.ruff]
indent-width = 4
line-length = 88
target-version = "py311"

[tool.ruff.lint]
fixable = [
    "ALL",
]
ignore = []
select = [
    "I",
]
unfixable = []

[tool.setuptools.packages.find]
include = [
    "sphinxrun",
]
