[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm[simple]>=8",
    "setuptools>=80",
]

[dependency-groups]
dev = [
    "furo>=2025.7.19",
    "ruff>=0.12.8",
]

[project]
classifiers = [
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
]
dependencies = [
    "sphinx>=8.2",
]
description = "Dynamically generated content for sphinx documentations"
dynamic = [
    "version",
]
license = "BSD-2-Clause"
license-files = [
    "LICENSE.rst",
]
name = "sphinxrun"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
indent-width = 4
line-length = 88
target-version = "py311"

[tool.ruff.lint]
fixable = [
    "ALL",
]
ignore = []
select = [
    "I",
]
unfixable = []

[tool.setuptools.packages.find]
include = [
    "sphinxrun",
]
